[workspace]
members = ["api", "program", "client", "cli"]
resolver = "2"

[workspace.package]
version = "1.0.0"
edition = "2021"
license = "Apache-2.0"
homepage = "https://flipcash.com"
description = "USDF Swap Program - A Solana liquidity pool for stablecoin swaps between USDF"
repository = "https://github.com/code-payments/usdf-swap-program/"
readme = "./README.md"
keywords = ["solana", "crypto", "stablecoin", "swap"]

[workspace.dependencies]
usdf-swap-api = { version = "1.0.0", path = "./api" }
usdf-swap-client = { version = "1.0.0", path = "./client" }

anyhow = "1.0"
num_enum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
solana-client = "=2.1"
solana-program = "=2.1"
solana-sdk = "=2.1"
solana-transaction-status = "=2.1"
solana-transaction-status-client-types = "=2.1"
solana-account-decoder = "=2.1"
spl-associated-token-account = { features = ["no-entrypoint"], version = "^6" }
spl-token-2022 = { features = ["no-entrypoint"], version = "7" }
spl-token = { features = ["no-entrypoint"], version = "^4" }
steel = { version="4.0.0", features = ["spl"] }

# client-specific
bincode = "1.3"
base64 = "0.13"
rand = "0.8"

# cli-specific
clap = { version = "4.5", features = ["derive"] }
colored = "3.0.0"
dialoguer = "0.11.0"
dirs = "5.0"
tokio = { version = "1.37", features = ["full"] }
chrono = "0.4"
indicatif = "0.17"
console = "0.15"

# program-specific
litesvm = "0.5.0"
bytemuck = "1.14.3"
bytemuck_derive = "1.7.0"
solana-security-txt = "1.1.2"

[patch.crates-io]

[profile.release]
overflow-checks = true

[profile.dev]
overflow-checks = true
