[package]
name = "usdf-swap-api"
description.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
readme.workspace = true

documentation = "https://docs.rs/usdf-swap-api"

[dependencies]
solana-program.workspace = true
bytemuck.workspace = true
steel.workspace = true
num_enum.workspace = true
spl-token.workspace = true

[dev-dependencies]
solana-sdk = "2.1.0"
