[package]
name = "usdf-swap"
version = "1.0.0"
description = "USDF Swap Program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "usdf_swap"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.32.1"
anchor-spl = "0.32.1"
